--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,30 @@
 
 <head>
     <title>MEAN hotel</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
 
     <h1>MEAN hotel homepage</h1>
 
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted text-center">
+                <a href="" target="_blank">
+                    <img src="images/hotel_logo.png"
+                    height="64" alt="Welcome to Hotel Pixel">
+                </a>
+            </p>
+
+            <p class="text-muted text-center">
+                <small>&copy; 2017 M. Lambrecht</small>
+            </p>
+        </div>
+    </footer>
+
+    <script src="jquery/jquery-3.2.1.min.js"></script>
 </body>
 
 </html>
