--- a/examples/l04_angular/index.html
+++ b/examples/l04_angular/index.html
@@ -13,6 +13,7 @@
         <script src="angular/angular.min.js"></script>
         <script src="angular/angular-route.min.js"></script>
         <script src="app.js"></script>
-        <script src="controller.js"></script>
+        <script src="main/main-controller.js"></script>
+        <script src="film/film-controller.js"></script>
     </body>
 </html>
