--- a/examples/l04_angular/index.html
+++ b/examples/l04_angular/index.html
@@ -15,5 +15,6 @@
         <script src="app.js"></script>
         <script src="main/main-controller.js"></script>
         <script src="film/film-controller.js"></script>
+        <script src="datafactory/datafactory.js"></script>
     </body>
 </html>
