Angular: custom filters.

--- a/examples/l04_angular/main/main.html
+++ b/examples/l04_angular/main/main.html
@@ -1,5 +1,5 @@
 <h1>A long time ago!</h1>
-
+<p>{{ vm.date1 | dateSuffix }}</p>
 <ul>
     <li ng-repeat="film in vm.films">{{ film.title }}</li>
 </ul>
